# database

./: .gitignore  LICENSE  README.md  host_db.sh  pyproject.toml  requirements.txt
docs/: mkdocs.yaml
docs/source/: index.md
src/database/: CONFIG.py  database_handler.py
src/database/util/: base.py  managers.py  tables.py  views.py
tests/: test_database.py
